# g4hepem

G4HepEm/G4HepEmDataJsonIO/src/: G4HepEmDataJsonIOImpl.hh
apps/examples/trackingmanager-offload/: CMakeLists.txt  trackingmanager-offload.cc
testing/: CMakeLists.txt
